# DDPTouchdesigner

./: .gitignore  README.md  WINDOWS_BUILD_GUIDE.md
DDPInputCHOP/: BUILD_WINDOWS.md  CMakeLists.txt  DDPInputCHOP.cpp  DDPInputCHOP.h  Info.plist.template  build_windows.bat
DDPOutputCHOP/: .gitignore  BUILD_NOTES.md  BUILD_WINDOWS.md  CMakeLists.txt  DDPOutputCHOP.cpp  DDPOutputCHOP.h  DDP_PROTOCOL_REFERENCE.md  INSTALL.md  Info.plist.template  PROJECT_SUMMARY.md  README.md  build_windows.bat
Release/: DDPOutputCHOP.lib
Release/Mac/DDPInputCHOP.plugin/Contents/: Info.plist
Release/Mac/DDPInputCHOP.plugin/Contents/MacOS/: DDPInputCHOP
Release/Mac/DDPOutputCHOP.plugin/Contents/: Info.plist
Release/Mac/DDPOutputCHOP.plugin/Contents/MacOS/: DDPOutputCHOP
